2005-12-02  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/identifier.h :

	  - Renamed VLAD_IDENT_IS_IDENT to VLAD_IDENT_IS_ENT for clarity.

2005-12-01  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* configure.ac :
	* configure :
	* main/Makefile.in :

	  - Added missing dependencies from the Makefile.

	* main/vlad.cpp :

	  - Included polbase.h.

2005-11-29  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/consttab.cpp :
	* lib/fact.cpp :
	* lib/list.cpp :
	* lib/mem.h :
	* lib/polbase.cpp :
	* lib/seqtab.cpp :
	* lib/smwrap.cpp :
	* lib/stringlist.cpp :
	* lib/symtab.cpp :
	* lib/updatetab.cpp :
	* lib/wrapper.cpp :
	* main/agent.y :
	* main/policy.y :
	* main/vlad.cpp :

	  - Standardised calls to malloc, realloc, free, new and delete. Now
	    uses the macros defined in mem.h.

	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :
	* lib/list.cpp :
	* lib/list.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/updatetab.cpp :
	* lib/updatetab.h :
	* lib/wrapper.cpp :
	* main/agent.y :
	* main/parser.h :
	* main/policy.y :
	* main/vlad.cpp :

	  - Added the vlad_ prefix for all classes/

2005-11-23  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/Makefile.in :
	* lib/consttab.cpp :
	* lib/expression.cpp :
	* lib/fact.cpp :
	* lib/list.cpp :
	* lib/numberlist.cpp :
	* lib/polbase.cpp :
	* lib/seqtab.cpp :
	* lib/smwrap.cpp :
	* lib/stringlist.cpp :
	* lib/symtab.cpp :
	* lib/updatetab.cpp :
	* lib/vlad.h :
	* lib/wrapper.cpp :
	* main/agent.y :
	* main/policy.y :
	* main/vlad.cpp :

	  - Moved all memory (malloc) stuff in mem.h

	* lib/Makefile.in :
	* lib/fact.h :
	* lib/polbase.h :
	* lib/vlad.h :
	* lib/atom.h :

	  - Moved all atom stuff in atom.h
